Opened 16 years ago
Closed 16 years ago
#1140 closed bug (fixed)
Missing symbol: SetDiskMode__5BView
Reported by: | aldeck | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Missing symbol: SetDiskMode__5BView
Trying to use the beos python bindings for R5 (Donn Cave's Bethon) :)
Looking at headers/be/interface/View.cpp, it's not implemented, nor documented in the usual bebooks. However i found this: http://www.acm.uiuc.edu/bug/Be%20Book/The%20Interface%20Kit/View.html#SetDiskMode()
Attachments (1)
Change History (3)
by , 16 years ago
Attachment: | setdiskmode.patch added |
---|
comment:1 by , 16 years ago
comment:2 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
fixed in hrev20617. (Exporting the symbol, the actual implementation of SetDiskMode() is still missing.)
Note:
See TracTickets
for help on using tickets.
i know the goal is not to run python by all means :) but left a patch for reference