* export SetDiskMode() symbol, thanks to "aldeck" for providing the BeBook link,   fixes ticket #1140

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20617 a95241bf-73f2-0310-859d-f6bbb57e9c96